tdf#149297: Fix Y position of vertical glyphs on macOS

Remove the Y position offset that became redundant and now double shifts
the glyphs after:

commit dd0d0b44fd1c6c0292d7b2eb3f5cf2baa21e4481
Author: Mark Hung <marklh9@gmail.com>
Date:   Sun May 2 15:12:46 2021 +0800

    vcl: adjust LayoutText() for vertical writing.

Change-Id: Iac7abfa69acfe75860d05800f446c25ed622bb95
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152366
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit ab1985d0b39e8bcc976543b9700e04610f434423)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152324
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>